# ubuntuscreenshot

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: screenshot4ubuntu.desktop  ubuntuscreenshot.desktop
gpui-local/: wayland_patch.sh
gpui-local/src/: platform.rs  window.rs
gpui-local/src/platform/linux/wayland/: client.rs  output_registry.patch  window.rs
packaging/DEBIAN/: control  postinst  postrm
packaging/usr/share/doc/ubuntuscreenshot/: README.md
scripts/: build-deb.sh  publish-release.sh  release-notes.md  run-dev.sh  setup-build-deps.sh  write-cargo-env.sh
src/: actions.rs  background.rs  capture.rs  capture_flow.rs  capture_gate.rs  desktop_layout.rs  i18n.rs  image_util.rs  inline_text.rs  launcher.rs  main.rs  model.rs  overlay.rs  preview.rs  tray.rs  util.rs
src/screencast/: mod.rs  pipewire.rs  portal.rs
