[package]
name = "screenshot4ubuntu"
version = "0.2.6"
edition = "2024"
description = "WeChat-style screenshot tool for Ubuntu/GNOME, built with GPUI"
license = "MIT"
repository = "https://github.com/flowinginthewind700/ubuntuscreenshot"
homepage = "https://github.com/flowinginthewind700/ubuntuscreenshot"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
ab_glyph = "0.2.32"
arboard = "3.4"
anyhow = "1.0.102"
chrono = "0.4.45"
dirs = "6.0.0"
gpui = { path = "./gpui-local" }
ksni = { version = "0.3.2", default-features = false, features = ["blocking", "tokio"] }
image = "0.25.9"
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
url = "2.5.8"
x11rb = { version = "0.13.2", features = ["allow-unsafe-code"] }
zbus = { version = "5.16.0", default-features = false, features = ["blocking-api"] }
unicode-segmentation = "1.12.0"
pipewire = "0.10.0"
memmap2 = "0.9"
